--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,8 @@
 <head>
     <!-- <meta charset="utf-8"> -->
     <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
-    <link rel="stylesheet" href="{{site.url}}/_sass/jquery.mCustomScrollbar.css">
-    <link rel="stylesheet" href="../_sass/bootstrap-select.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.10/css/bootstrap-select.min.css">
 
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.0.min.js" integrity="sha256-RTQy8VOmNlT6b2PIRur37p6JEBZUE7o8wPgMvu18MC4=" crossorigin="anonymous"></script>
@@ -19,9 +19,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-    <link rel="stylesheet" href="../_sass/font-awesome.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
 </head>
 
 <body data-spy="scroll" data-target="#myScrollspy" data-offset="5">
@@ -31,7 +31,7 @@
             <div class="container">
                 <div class="row no-flex">
                     <div class="col-sm-5 cols">
-                        <a href="index.html" class="logo"><img src="{{site.url}}/assets/images/techforce-logo.png" alt="Techforcer"></a>
+                        <a href="index.html" class="logo"><img src="/assets/images/techforce-logo.png" alt="Techforcer"></a>
                     </div>
                     <div class="col-sm-7 text-right cols">
                         <ul class="list-unstyled">
@@ -47,7 +47,7 @@
             <div id="particles-js">
                 <div class="blueBanner-parent">
                     <div class="blue-banner-content text-center">
-                        <h1>Hey there <img src="../assets/images/hand.png" alt="Hi">, how can we help?</h1>
+                        <h1>Hey there <img src="/assets/images/hand.png" alt="Hi">, how can we help?</h1>
                     </div>
                     <div class="breadcrumbBox">
                         <div class="container">
@@ -259,33 +259,33 @@
                                    <li>1. After downloading the RPA studio, move the downloaded studio.exe file to the desired folder where it needs to be installed.</li>
                                    <li>2. Right-click on the installer and select <strong>“Run as administrator”</strong> so that RPA studio will have “Admin” privileges.<br>
                                     The following image is an example of how to run as administrator.
-                                     <img src="../assets/images/doc-img1.png" alt="image">
+                                     <img src="/assets/images/doc-img1.png" alt="image">
                                    </li>
                                    <li>
                                     3. Windows will ask for permission stating “<strong>Do you want to allow the unknown publisher to install the application”</strong>. Click <strong>YES</strong>,  and the installation process will start. </li>
                                     <li>4. Accept the license agreement of Techforce.ai to proceed for the further installation process.
-                                    <img src="../assets/images/doc-img2.png" alt="image">
+                                    <img src="/assets/images/doc-img2.png" alt="image">
                                     The installation process will show the folder selection screen.
                                     </li>
                                     <li>5. Click on <strong>BROWSE</strong> and select a folder which does not contain a space in its name like shown in the image.
-                                      <img src="../assets/images/doc-img3.png" alt="image">
+                                      <img src="/assets/images/doc-img3.png" alt="image">
                                     </li>
                                     <li>6. After selecting the folder, click on <strong>“INSTALL”</strong> which will start installing RPA studio.
-                                      <img src="../assets/images/doc-img4.png" alt="image">
+                                      <img src="/assets/images/doc-img4.png" alt="image">
                                       <blockquote>
                                         <div>
-                                          <img src="../assets/images/idea.svg" alt="image">
+                                          <img src="/assets/images/idea.svg" alt="image">
                                           TIP
                                         </div>
                                         <p>On the folder selection screen, make sure to select a folder, which does not contain any space in the folder name. If the selected folder contains any space in its name, then the RPA scripts built using the studio cannot be executed.</p>
                                       </blockquote>
                                     </li>
                                     <li>7. The installation will take a bit time, and after installing the Studio, click on <strong>CLOSE</strong> button to proceed for further process.
-                                      <img src="../assets/images/doc-img5.png" alt="image">
+                                      <img src="/assets/images/doc-img5.png" alt="image">
                                       RPA studio installer will prompt to download a dependency file. Install the dependency file.
                                     </li>
                                     <li>8. Click on the <strong>“OK”</strong> button as shown in the above image, to install Techforce OCR, which is a dependency to RPA studio.
-                                    <img src="../assets/images/doc-img6.png" alt="image"></li>
+                                    <img src="/assets/images/doc-img6.png" alt="image"></li>
                                  </ol>
                             </div>
                             <div id="ocr3"  class="page-section">
@@ -293,7 +293,7 @@
                               <p>Techforce OCR needs <strong>164MB</strong> of hard disk space for installation.</p>
                               <ol>
                                 <li>1. In the first screen of Techforce OCR installation, select preferred language, <br>and click <strong>“OK”</strong> which will start the installation of Techforce OCR.
-                                <img src="../assets/images/doc-img7.png" alt="image">
+                                <img src="/assets/images/doc-img7.png" alt="image">
                                 </li>
                                 <li>
                                   2. In the next screen of OCR installation, click <strong>NEXT</strong> to continue the installation process.
@@ -301,23 +301,23 @@
                                 </li>
                                 <li>
                                   3. Accept the license agreement of Techforce OCR to <strong>continue</strong> the installation process.
-                                  <img src="../assets/images/doc-img8.png" alt="image">
+                                  <img src="/assets/images/doc-img8.png" alt="image">
                                 </li>
                                 <li>
                                  4. After accepting the agreement, specify/select who should have the user level <br>access to OCR Select appropriately from. <strong>“Install for anyone using this computer or Install just for me”</strong>.
-                                  <img src="../assets/images/doc-img9.png" alt="image">
+                                  <img src="/assets/images/doc-img9.png" alt="image">
                                 </li>
                                 <li>
                                 5. Select any one of the options and click on <strong>NEXT</strong> button. In the next screen choose the components that are to be installed or else just click on <strong>NEXT</strong> to continue the installation process.
-                                  <img src="../assets/images/doc-img10.png" alt="image">
+                                  <img src="/assets/images/doc-img10.png" alt="image">
                                 </li>
                                 <li>
                                 6. After selecting the components, the installation process will show the folder path selection. Keep the default storage space or else specify the installation folder.
-                                  <img src="../assets/images/doc-img11.png" alt="image">
+                                  <img src="/assets/images/doc-img11.png" alt="image">
                                 </li>
                                 <li>7. Select the options for start menu action and then click on <strong>Install</strong> to.</li>
                                 <li>8. After installation, click on <strong>NEXT</strong> button and then click on <strong>FINISH</strong> button to complete the RPA Studio installation
-                                <img src="../assets/images/doc-img12.png" alt="image">
+                                <img src="/assets/images/doc-img12.png" alt="image">
                                 </li>
                               </ol>
                             </div>
@@ -352,10 +352,10 @@
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-    <script src="../assets/js/bootstrap-select.js"></script>
-    <script src="../assets/js/jquery.mCustomScrollbar.concat.min.js"></script>
-    <script src="../assets/js/particles.min.js"></script>
-    <script src="../assets/js/custom.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.10/js/bootstrap-select.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.3/particles.min.js"></script>
+    <script src="/assets/js/custom.js"></script>
     <script>
     (function(i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
