--- a/_sass/jekyll-theme-leap-day.css
+++ b/_sass/jekyll-theme-leap-day.css
@@ -149,8 +149,7 @@ body {
   padding-left: 8px;
 } */
 /* section img { */
-  max-width: 100%;
-}
+
 
 /* blockquote {
   border-left:1px solid #ffcc00;
@@ -722,10 +721,13 @@ header.blue-header ul li a{color:#fff;text-transform:uppercase;font-weight:300}
 
 .documentTabCLick .nav-tabs li{float:none}
 .documentTabCLick li a:focus,.documentTabCLick li.active a,.documentTabCLick li:focus{font-weight:500;border:none!important;-webkit-box-shadow:none;box-shadow:none}
-.doc-data h3{font-size: 40px; font-weight: 500; line-height: 1.13; text-transform:capitalize;color: #000000;margin:0 0 20px 0}
+.doc-data h3{font-size: 35px; font-weight: 500; line-height: 1.13; text-transform:capitalize;color: #000000;margin:0 0 25px 0}
 .doc-data p, .doc-data li{font-size:16px;font-weight:normal;line-height:1.88;color:#666;margin-bottom:20px}
-.doc-data li {line-height: 1.63; margin-bottom: 12px; position: relative;padding-left: 23px;}
-.doc-data li .numbers{position: absolute;left: 0; top: 0;}
+.doc-data p{margin-bottom: 15px;}
+.doc-data li {line-height: 1.63; margin-bottom: 12px; position: relative;/* padding-left: 23px; */}
+/* .doc-data li .numbers, */ .doc-data h3 .numbers{position: absolute;left: 0; top: 0;}
+.doc-data h3{padding-left: 40px;position: relative}
+.doc-data h3.double{padding-left: 62px}
 .doc-data strong{ font-weight: 500;
   color: #333333;}
 
@@ -734,10 +736,10 @@ header.blue-header ul li a{color:#fff;text-transform:uppercase;font-weight:300}
 .rateUs.greyBg .ratingBoxMain:after{top:65px}
 .doc-data img{width: 100%;
     text-align: left;
-    margin-left: -85px;
-    margin-top: -50px;
+    margin-left:-65px;
+    margin-top: -40px;
     display: block;
-    margin-bottom: -30px;}
+    margin-bottom: -20px;}
 .documentation{margin-top:60px;padding-bottom: 70px;}
 .blueLink{max-width: 80%;
     color: #008be2;
@@ -759,7 +761,7 @@ header.blue-header ul li a{color:#fff;text-transform:uppercase;font-weight:300}
 .blueFooter{border-top:1px solid #e4e4e4;text-align:center;padding:10px 0}
 
 .documentTabCLick .nav-pills.fixed {position: fixed; top: 0;width:26.7%; }
-.doc-data table{width: 100%;border-collapse: collapse;    border: 1px solid #e6e6e6;margin-bottom: 30px;}
+.doc-data table{width: 100%;border-collapse: collapse;    border: 1px solid #e6e6e6;margin-bottom: 5px;}
 .doc-data h4 {font-size: 25px; font-weight: 500; line-height: 25px; color: #333333; position: relative; padding-left: 21px; margin: 0 0 30px 0;padding-top: 5px; }
 .doc-data h4:before{position: absolute;left: 0; top: 5px;content: "";  width: 3px;background-color: #ffa429;height: 100%;}
 .doc-data h4.blue:before{background-color: #008be2}
@@ -795,7 +797,7 @@ div#sidebar {overflow: hidden; position: relative }
 .documentTabCLick .nav-pills>li>a:focus{font-weight: 500;background: transparent;}
 .documentTabCLick .nav-pills>li ul li a{font-size: 14px; font-weight: normal; line-height: 24px; color: #666666; padding: 4px 10px 4px 25px;}
 .customScroll .mCSB_scrollTools .mCSB_draggerRail{background:#ddd;width:1px}
-.customScroll .mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar{background-color:#00c58a;width:2px}
+.customScroll .mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar{background-color:#00c58a;width:5px}
 .customScroll .mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar,.customScroll .mCSB_scrollTools .mCSB_dragger.mCSB_dragger_onDrag .mCSB_dragger_bar,.customScroll .mCSB_scrollTools .mCSB_dragger:active .mCSB_dragger_bar{background-color:#00c58a}
 .customScroll #mCSB_1_scrollbar_vertical .mCSB_dragger{height:84px!important}
 .documentTabCLick .mCSB_inside>.mCSB_container {
@@ -804,6 +806,36 @@ div#sidebar {overflow: hidden; position: relative }
 .doc-data strong.blue{color: #008be2;}
 .doc-data .orange{color: #ffc015}
 .darkBlue{color: #008be2}
+.doc-data h4.skyBlue:before{background: #07d9ff;}
+.doc-data h4.pink:before{background-color: #e200c8;}
+.diamondList li{position: relative}
+.diamondList li:before{width: 9.9px;
+  height: 9.9px;
+  background-color: #02ce9d;left: 0;top:8px;content: '';position: absolute;-webkit-transform: rotate(45deg);transform: rotate(45deg);}
+  ul.diamondList {
+    margin-top: 15px;
+}
+.doc-data h6{
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 1.67;
+  color: #333333;margin:25px 0 20px;}
+  .doc-data .noPadding li{padding:0;}
+  .page-section {
+    margin-bottom: 35px;
+}
+.doc-data li.mb-0{margin-bottom: 0}
+.doc-data .diamondList li {
+    padding-left: 23px;
+}
+.romanListing span.numbers {
+    color: #02ce9d;
+}
+.doc-data img.lessSpace{margin-left: -55px}
+.doc-data blockquote.big{padding-left: 70px}
+.img-caption {
+    margin-top: -50px;
+}
 /**** RESPONSIVE*****/
 
 @media (min-width: 1271px) {
@@ -873,10 +905,14 @@ div#sidebar {overflow: hidden; position: relative }
     .blueLink {
     max-width: inherit;}
     .doc-data img {
-    margin-left: -40px;
+    margin-left:-50px;
     margin-top: -20px;
     margin-bottom: -30px;
 }
+.doc-data img.lessSpace {
+    margin-left: -45px;
+}
+.documentTabCLick .nav-pills.fixed{width: 31%;}
 }
 @media (max-width: 767px){
   .searchBox input {
@@ -909,7 +945,11 @@ div#sidebar {overflow: hidden; position: relative }
   .documentTabCLick {
     width: 30%;
     float: left;
-}.doc-data {
+}
+.documentTabCLick .nav-pills.fixed {
+    width: 28%;
+}
+.doc-data {
     float: left;
     width: 70%;
 }
@@ -934,7 +974,7 @@ div#sidebar {overflow: hidden; position: relative }
       width: 100%;
       float: none;
   }
-  .documentTabCLick .nav-pills, .documentTabCLick .nav-pills.fixed{width: 100%; position: static;max-height: inherit}
+  .documentTabCLick .nav-pills, .documentTabCLick .nav-pills.fixed{width: 100%; position: static;max-height: inherit;    max-height: 350px;}
   div#sidebar{height: auto!important}
   .rateUs p {
     font-size: 14px;
@@ -952,9 +992,10 @@ div#sidebar {overflow: hidden; position: relative }
 .rateUs {
     padding: 30px 0 30px;
 }
-.doc-data img {
+.doc-data img, .doc-data img.lessSpace {
     margin: 0;
 }
+
 }
 @media (max-width: 620px){
   .blue-banner-content h1 {
