--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -153,8 +153,18 @@
    .rateUs .main-heading{margin-bottom:15px;font-weight:500}
    .rateUs{padding:80px 0 80px}
    .rateUs p{font-size:16px;font-weight:500;line-height:1.88;color:#999}
-   .blueFooter p{ position:fixed;font-size:9px;letter-spacing:.2px;color:#666}
+   footer{
+     position:fixed;
+   }
+   .blueFooter p
+   {
+     position:fixed;
+     font-size:12px;
+     letter-spacing:.2px;
+     color:#666
+   }
    .blueFooter{
+     width: 100%;
      position:fixed;
      border-top:1px solid #e4e4e4;
      text-align:center;
