--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2138,6 +2138,9 @@
               </ul>
               </div>
           </div>
+          <div class="footer-container">
+              <p>Privacy Policy I Terms & Condition I © 2016-2019 Website Design All rights reserved.</p>
+          </div>
       </div>
       <!--Foorter Start-->
             <div class="footer-container">
