--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,14 +35,15 @@
      background: none;
      box-shadow: none;
    }
-   .child{
 
-   }
    td:first-child{
     border-left:1px solid #e5e5e5;
   }
   td{
     border-right:1px solid #e5e5e5;
+  }
+  .child 9{
+    margin-left: 30px;
   }
   .Designer {
       border: 1px solid #e6e6e6;
@@ -563,7 +564,7 @@
                                 <ul class="collapse list-unstyled collapse-2">
                                     <li><a class="child 2" href="#download3"><span class="numbers">3.1.</span> Installation</a>
                                         <ul>
-                                           <li><a class="child 2" href="#download3"><span class="numbers">3.1.</span> Installation</a></li>
+                                           <li><a class="child 9" href="#download3"><span class="numbers">3.1.1.</span> Installation</a></li>
                                         </ul>
                                     </li>
                                     <li><a class="child 2" href="#install3"><span class="numbers">3.2.</span> Installing RPA Studio</a></li>
