--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -564,7 +564,7 @@
                                 <ul class="collapse list-unstyled collapse-2">
                                     <li><a class="child 2" href="#download3"><span class="numbers">3.1.</span> Installation</a>
                                         <ul>
-                                           <li><a class="child 9" href="#download3"><span class="numbers">3.1.1.</span> Installation</a></li>
+                                           <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.1.1.</span> Installation</a></li>
                                         </ul>
                                     </li>
                                     <li><a class="child 2" href="#install3"><span class="numbers">3.2.</span> Installing RPA Studio</a></li>
