--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -564,11 +564,11 @@
                                 <ul class="collapse list-unstyled collapse-2">
                                     <li><a class="child 2" href="#download3"><span class="numbers">3.1.</span> Installation</a>
                                         <ul>
-                                           <li><a class="child 2" href="#download3"><span class="numbers">3.1.1</span> Software Requirements</a></li>
-                                           <li><a class="child 2" href="#download3"><span class="numbers">3.1.2</span> Hardware Requirements</a></li>
-                                           <li><a class="child 2" href="#download3"><span class="numbers">3.1.3</span> Installation Instructions</a></li>
-                                           <li><a class="child 2" href="#download3"><span class="numbers">3.1.4</span> Installing Techforce OCR</a></li>
-                                           <li><a class="child 2" href="#download3"><span class="numbers">3.1.5</span> Un-install Instructions</a></li>
+                                           <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.1.1</span> <span>Software Requirements</span></a></li>
+                                           <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.1.2</span> Hardware Requirements</a></li>
+                                           <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.1.3</span> Installation Instructions</a></li>
+                                           <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.1.4</span> Installing Techforce OCR</a></li>
+                                           <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.1.5</span> Un-install Instructions</a></li>
                                         </ul>
                                     </li>
                                     <li><a class="child 2" href="#install3"><span class="numbers">3.2.</span> Installing RPA Studio</a></li>
