--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -564,15 +564,64 @@
                                 <ul class="collapse list-unstyled collapse-2">
                                     <li><a class="child 2" href="#download3"><span class="numbers">3.1.</span> Installation</a>
                                         <ul>
-                                           <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.1.1</span> <span style="margin-left:10px;">Software Requirements</span></a></li>
-                                           <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.1.2</span> Hardware Requirements</a></li>
-                                           <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.1.3</span> Installation Instructions</a></li>
-                                           <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.1.4</span> Installing Techforce OCR</a></li>
-                                           <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.1.5</span> Un-install Instructions</a></li>
+                                           <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.1.1</span> <span style="margin-left:5px;">Software Requirements</span></a></li>
+                                           <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.1.2</span> <span style="margin-left:5px;">Hardware Requirements</span></a></li>
+                                           <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.1.3</span> <span style="margin-left:5px;">Installation Instructions</span></a></li>
+                                           <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.1.4</span> <span style="margin-left:5px;">Installing Techforce OCR</span></a></li>
+                                           <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.1.5</span> <span style="margin-left:5px;">Un-install Instructions</span></a></li>
                                         </ul>
                                     </li>
-                                    <li><a class="child 2" href="#install3"><span class="numbers">3.2.</span> Installing RPA Studio</a></li>
-                                    <li><a class="child 2" href="#ocr3"><span class="numbers">3.3.</span> Installing Techforce OCR</a></li>
+                                    <li><a class="child 2" href="#install3"><span class="numbers">3.2.</span> Building a basic bot</a></li>
+                                    <li><a class="child 2" href="#ocr3"><span class="numbers">3.3.</span> Menu Options</a>
+                                        <ul>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.3.1</span> <span style="margin-left:5px;">New</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.3.2</span> <span style="margin-left:5px;">Open</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.3.3</span> <span style="margin-left:5px;">Save</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.3.4</span> <span style="margin-left:5px;">Record</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.3.5</span> <span style="margin-left:5px;">Clear</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.3.6</span> <span style="margin-left:5px;">Publish</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.3.7</span> <span style="margin-left:5px;">Settings</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.3.8</span> <span style="margin-left:5px;">Stop</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.3.9</span> <span style="margin-left:5px;">Play</span></a></li>
+                                        </ul>
+                                    </li>
+                                      <li><a class="child 2" href="#action"><span class="numbers">3.4.</span> Action Library</a>
+                                        <ul>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.1</span> <span style="margin-left:5px;">Stage</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.2</span> <span style="margin-left:5px;">Desktop Automation</span></a>
+                                          <ul>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.2.1</span> <span style="margin-left:5px;">Keyboard Shortcuts</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.2.2</span> <span style="margin-left:5px;">Drag and Drop</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.2.3</span> <span style="margin-left:5px;">Open App</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.2.4</span> <span style="margin-left:5px;">Close App</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.2.5</span> <span style="margin-left:5px;">Close</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.2.6</span> <span style="margin-left:5px;">Switch App</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.2.7</span> <span style="margin-left:5px;">Screenshot</span></a></li>
+                                         </ul></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.3</span> <span style="margin-left:5px;">Web Automation</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4</span> <span style="margin-left:5px;">Stage</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4</span> <span style="margin-left:5px;">Stage</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4</span> <span style="margin-left:5px;">Stage</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4</span> <span style="margin-left:5px;">Stage</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4</span> <span style="margin-left:5px;">Stage</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4</span> <span style="margin-left:5px;">Stage</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4</span> <span style="margin-left:5px;">Stage</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4</span> <span style="margin-left:5px;">Stage</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4</span> <span style="margin-left:5px;">Stage</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4</span> <span style="margin-left:5px;">Stage</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4</span> <span style="margin-left:5px;">Stage</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4</span> <span style="margin-left:5px;">Stage</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4</span> <span style="margin-left:5px;">Stage</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4</span> <span style="margin-left:5px;">Stage</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4</span> <span style="margin-left:5px;">Stage</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4</span> <span style="margin-left:5px;">Stage</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4</span> <span style="margin-left:5px;">Stage</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4</span> <span style="margin-left:5px;">Stage</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4</span> <span style="margin-left:5px;">Stage</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4</span> <span style="margin-left:5px;">Stage</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4</span> <span style="margin-left:5px;">Stage</span></a></li>
+                                        </ul>
+                                      </li>
                                 </ul>
                             </li>
                             <li>
